--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.songlist.SonglistActivity"></activity>
+        <activity android:name=".ui.song.SongPageActivity"></activity>
+        <activity android:name=".ui.songlist.SonglistActivity" />
         <activity android:name=".ui.homepage.HomePageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
